# NeonGuitarFX

./: .gitignore  CMakeLists.txt  INSTALAR_CMAKE_WINDOWS.md  NEXT_STEPS.md  PROGRESS_PHASE2.md  PROJECT_SUMMARY.md  README.md  README_WINDOWS.md  WINDOWS_BUILD_GUIDE.md  build_windows.bat  setup_and_build.bat
.github/workflows/: build-windows.yml
Source/: NAMProcessor.cpp  NAMProcessor.h  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
cmake/: Toolchain-mingw64.cmake
